--- a/ZumaWPF/Views/GameScreenView.xaml
+++ b/ZumaWPF/Views/GameScreenView.xaml
@@ -4,19 +4,28 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="600" d:DesignWidth="800">
+             d:DesignHeight="800" d:DesignWidth="1000">
 
     <Grid>
+        <!-- Canvas с фоном -->
         <Canvas Name="GameCanvas" 
-                Background="#E8F5E9"
                 MouseMove="GameCanvas_MouseMove"
                 MouseLeftButtonDown="GameCanvas_MouseLeftButtonDown"
                 ClipToBounds="True"
-                Width="800"
-                Height="600"
+                Width="1000"
+                Height="800"
                 Focusable="True"
-                KeyDown="GameCanvas_KeyDown"/>
+                KeyDown="GameCanvas_KeyDown">
 
+            <!-- Фоновое изображение -->
+            <Canvas.Background>
+                <ImageBrush ImageSource="/Assets/Images/game_bg.jpg" 
+                            Stretch="UniformToFill"/>
+            </Canvas.Background>
+
+        </Canvas>
+
+        <!-- Панель с очками и уровнем -->
         <Border Background="#80000000"
                 Padding="10"
                 CornerRadius="6"
